tests/type-check/bad/number-is-not-tuple.arr
x :: Number = {3;4}
